# nifty

./: .gitignore  README.md  ai_analysis.py  app.py  data_store.py  option_chain.py  pyproject.toml  render.yaml  requirements-render.txt  start.sh  trading_opinions.json
attached_assets/: Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-app-py-line-52-in-main-op-1742367310233.txt
