
[tool.poetry]
name = "nifty50-analysis"
version = "0.1.0"
description = "Nifty50 Option Chain Analysis Platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
nsepython = ">=2.94"
openai = ">=1.66.5"
pandas = ">=2.2.3"
plotly = ">=6.0.1"
streamlit = ">=1.43.2"
twilio = ">=9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
